--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,14 +32,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.facebook.fresco:fresco:1.9.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 
-    implementation 'com.github.fatgingercat:FGCKit-Android:0.0.6'
+    implementation 'com.github.fatgingercat:FGCKit-Android:1.0.2.1'
 }
